--- a/src/app/Components/Navigation/header/header.component.html
+++ b/src/app/Components/Navigation/header/header.component.html
@@ -12,7 +12,10 @@
         <!-- <h1 class="title">Logix solution</h1> -->
     </div>
     <div class="d-flex pt-3">
-        <h3>Welcome Mr.  <mat-icon class="pt-1" >person</mat-icon> {{UserName}}</h3>
+        <img src="../../../../assets/Images/BGHotel.png" height="30" width="30" class=" me-2" >
+        <h3>WELCOME  <mat-icon class="pt-1" >person</mat-icon> {{UserName}}</h3>
+       
+
     </div>
     
         <div class="justify-content-around">
