--- a/src/app/Components/hotel-dashboard/hotel-dashboard.component.scss
+++ b/src/app/Components/hotel-dashboard/hotel-dashboard.component.scss
@@ -88,3 +88,21 @@
     // }
 
    }
+
+
+   .dateCard{
+    width:35px;
+     height:35px;
+   }
+
+
+   .eColor{
+    background-color: white;
+   }
+
+   .bColor{
+    background-color: rgb(100, 243, 5);
+   }
+   .cColor{
+    background-color: rgb(5, 147, 242);
+   }
